--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_CONN="mongodb+srv://bhanwarlal11:bhanwarlal@cluster0.agqefrh.mongodb.net/login-signup-mern-app?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_CONN=mongourl
 JWT_SECRET=1234
